--- a/client/scss/pages/_home.scss
+++ b/client/scss/pages/_home.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.section-features {
+.section-skills {
   padding: 20rem 0;
   background-image: linear-gradient(
       to right bottom,
@@ -32,6 +32,8 @@
     margin-bottom: 7rem;
   }
 }
+
+
 
 .section-tours {
   background-color: $color-grey-light-1;
