--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -14,6 +14,8 @@
 @import 'components/bg-video';
 @import 'components/form';
 @import 'components/popup';
+@import 'components/bio';
+@import 'components/skills-graph';
 
 @import 'layout/header';
 @import 'layout/grid';
