added projects and logo

--- a/client/scss/abstracts/_variables.scss
+++ b/client/scss/abstracts/_variables.scss
@@ -26,6 +26,9 @@ $color-header-dark: #022022;
 $color-theme-light: #81bab4;
 $color-theme-dark: #4e7d78;
 
+$color-chart-label: #0e7271; 
+$color-chart-bar: #1c302e;; 
+
 // Font sizes
 
 $default-font-size: 1.6rem;
@@ -33,7 +36,7 @@ $medium-font-size: 1.2rem;
 
 // Grid
 
-$grid-width: 110rem;
+$grid-width: 150rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
