--- a/client/scss/components/_card.scss
+++ b/client/scss/components/_card.scss
@@ -84,65 +84,101 @@
       background-image: url(/img/devcon.jpg);
     }
     &--2 {
-      background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
-        url(/img/nat-6.jpg);
+      background-image: url(/img/githubfinder.jpg);
+      // margin-right: auto;
+      // margin-left: 3rem;
+      background-size: 100% 98%;
+      background-repeat: no-repeat;
     }
     &--3 {
-      background-image: linear-gradient(
-          to right bottom,
-          $color-tertiary-light,
-          $color-tertiary-dark
-        ),
-        url(/img/nat-7.jpg);
+      background-image: url(/img/budgetApp.jpg);
     }
+
+    &--4 {
+      background-image: url(/img/recipeApp.jpg);
+    }
+
+    &--5 {
+      background-image: url(/img/contactkeeperB.jpg);
+    }
+
+    background-size: 100% 98%;
+    background-repeat: no-repeat;
   }
   &__heading {
-    font-size: 2.8rem;
-    font-weight: 300;
+    font-size: 1.5rem;
+    font-weight: 400;
     text-transform: uppercase;
-    text-align: right;
+    text-align: center;
     color: $color-white;
     position: absolute;
-    top: 12rem;
-    right: 2rem;
-    width: 65%;
+    top: 18rem;
+    // right: 2rem;
+    width: 100%;
   }
 
   &__heading-span {
-    padding: 1rem 1.5rem;
+    padding: 0.75rem 1.2rem;
     box-decoration-break: clone;
+    border-radius: 10px;
     &--1 {
-      // background-image: linear-gradient(
-      //   to right bottom,
-      //   rgba($color-secondary-light, 0.85),
-      //   rgba($color-secondary-dark, 0.85)
-      // );
+      background-color: $color-primary-dark;
     }
     &--2 {
+      // background-image: linear-gradient(
+      //   to right bottom,
+      //   rgba($color-grey-dark-3, 0.65),
+      //   rgba($color-grey-dark-3, 0.98)
+      // );
       background-image: linear-gradient(
         to right bottom,
-        rgba($color-primary-light, 0.85),
-        rgba($color-primary-dark, 0.85)
+        rgba($color-primary, 1),
+        rgba($color-grey-dark-3, 1)
       );
     }
     &--3 {
       background-image: linear-gradient(
         to right bottom,
-        rgba($color-tertiary-light, 0.85),
-        rgba($color-tertiary-dark, 0.85)
+        rgba($color-primary, 1),
+        rgba($color-grey-dark-3, 1)
+      );
+    }
+
+    &--4 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary, 1),
+        rgba($color-grey-dark-3, 1)
+      );
+    }
+    &--5 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary, 1),
+        rgba($color-grey-dark-3, 1)
       );
     }
   }
   &__details {
+    height: 100%;
     padding: 3rem;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary, 0.7),
+      rgba($color-grey-dark-3, 0.8)
+    );
+
+    background-attachment: fixed;
+    background-size: cover;
+    color: $color-grey-light-1;
     ul {
       list-style: none;
       width: 80%;
       margin: 0 auto;
       li {
-        text-align: center;
-        font-size: 1.5rem;
-        padding: 1rem;
+        text-align: left;
+        font-size: 1.4rem;
+        padding: 0.75rem;
 
         &:not(:last-child) {
           border-bottom: 1px solid $color-grey-light-2;
@@ -157,14 +193,15 @@
     position: absolute;
 
     //next 3 lines center on the parent element
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+    padding: 2rem;
     width: 90%;
-    text-align: center;
+    text-align: left;
   }
   &__price-box {
-    text-align: center;
+    text-align: left;
     color: $color-black;
     margin-bottom: 8rem;
   }
@@ -176,9 +213,9 @@
   }
 
   &__project-text {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     font-weight: 400;
-    margin-top: 2rem;
+    margin-top: 1rem;
     // text-transform: uppercase;
   }
 
@@ -190,6 +227,12 @@
   &__price-value {
     font-size: 6rem;
     font-weight: 100;
+  }
+
+  .card-buttons {
+    position: absolute;
+    bottom: 20px;
+    text-align: center;
   }
 
   // Media Query ************************************
