--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,16 @@ body {
 .card__side--back {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .card__side--back-2 {
@@ -660,6 +670,14 @@ body {
   background-image: url(/img/contactkeeperB.jpg);
 }
 
+.card__picture--6 {
+  background-image: url(/img/nexter.jpg);
+}
+
+.card__picture--7 {
+  background-image: url(/img/newtech.jpg);
+}
+
 .card__heading {
   font-size: 1.5rem;
   font-weight: 400;
@@ -706,6 +724,12 @@ body {
   background-image: linear-gradient(to right bottom, #52a099, #333333);
 }
 
+.card__heading-span--6 {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#52a099), to(#333333));
+  background-image: -o-linear-gradient(left top, #52a099, #333333);
+  background-image: linear-gradient(to right bottom, #52a099, #333333);
+}
+
 .card__details {
   height: 100%;
   padding: 3rem;
@@ -735,9 +759,15 @@ body {
 
 .card__cta {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
   padding: 2rem;
   width: 90%;
   text-align: left;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .card__price-box {
@@ -770,8 +800,14 @@ body {
 
 .card .card-buttons {
   position: absolute;
-  bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   text-align: center;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 @media only screen and (max-width: 56.25em), only screen and (hover: none) {
