--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,10 @@ body {
   }
 }
 
+.u-margin-top-medium {
+  margin-top: 4rem !important;
+}
+
 .u-margin-top-big {
   margin-top: 8rem !important;
 }
@@ -326,6 +330,15 @@ body {
   font-size: 1.6rem;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.heading-fourth {
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.heading-fourth-popup {
+  color: #eee;
 }
 
 .paragraph {
@@ -678,6 +691,10 @@ body {
   background-image: url(/img/newtech.jpg);
 }
 
+.card__picture--8 {
+  background-image: url(/img/clickPlane.jpg);
+}
+
 .card__heading {
   font-size: 1.5rem;
   font-weight: 400;
@@ -798,14 +815,23 @@ body {
   font-weight: 100;
 }
 
+.card .card__button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .card .card-buttons {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  text-align: center;
-  -ms-flex-line-pack: end;
-      align-content: flex-end;
+  justify-self: center;
+  margin-left: 2rem;
+  margin-right: auto;
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
@@ -1184,7 +1210,6 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
   z-index: 3000;
   opacity: 0;
   visibility: hidden;
@@ -1212,6 +1237,11 @@ body {
   background-color: #fff;
   -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(32, 76, 77, 0.7)), to(rgba(2, 32, 34, 0.9))), url(/img/heroNew2.jpg);
+  background-image: -o-linear-gradient(left top, rgba(32, 76, 77, 0.7), rgba(2, 32, 34, 0.9)), url(/img/heroNew2.jpg);
+  background-image: linear-gradient(to right bottom, rgba(32, 76, 77, 0.7), rgba(2, 32, 34, 0.9)), url(/img/heroNew2.jpg);
+  background-size: cover;
+  background-position: top;
   border-radius: 5px;
   display: table;
   overflow: hidden;
@@ -1284,6 +1314,7 @@ body {
 .popup__text {
   font-size: 1.4rem;
   margin-bottom: 4rem;
+  color: #eee;
   -webkit-column-count: 2;
           column-count: 2;
   -webkit-column-gap: 4rem;
@@ -1304,6 +1335,54 @@ body {
             column-count: 1;
     text-align: left;
   }
+}
+
+.popup__link {
+  text-decoration: none;
+  color: #eee;
+  font-size: 1.5rem;
+  text-align: center;
+  margin-left: 2rem;
+  width: 10%;
+}
+
+.popup__link-app, .popup__link-code {
+  background-color: #52a099;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 2px;
+  display: block;
+  border-radius: 5px;
+}
+
+.popup__link-code {
+  background-color: #4e7d78;
+}
+
+.popup table,
+.popup th,
+.popup td {
+  border: 1px solid #52a099;
+  padding: 5px;
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+.popup table {
+  border-spacing: 5px;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#52a099), to(#333333));
+  background-image: -o-linear-gradient(left top, #52a099, #333333);
+  background-image: linear-gradient(to right bottom, #52a099, #333333);
+}
+
+.popup__name {
+  color: #eee;
+}
+
+.popup__describe {
+  color: #eee;
+  text-align: left;
 }
 
 .popup:target {
