--- a/client/scss/abstracts/_variables.scss
+++ b/client/scss/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // colors
 
 $color-primary: #52a099;
-$color-primary-light:#81bab4;
+$color-primary-light: #81bab4;
 $color-primary-dark: #4e7d78;
 
 $color-secondary-light: #ffb900;
@@ -26,8 +26,8 @@ $color-header-dark: #022022;
 $color-theme-light: #81bab4;
 $color-theme-dark: #4e7d78;
 
-$color-chart-label: #0e7271; 
-$color-chart-bar: #1c302e;; 
+$color-chart-label: #0e7271;
+$color-chart-bar: #1c302e;
 
 // Font sizes
 
@@ -44,7 +44,6 @@ $gutter-horizontal: 6rem;
 // Misc
 
 $border-radius: 5px;
-
 
 // media query break point variables  must be in scss not css variables to work
 
