--- a/client/scss/base/_utilities.scss
+++ b/client/scss/base/_utilities.scss
@@ -18,6 +18,10 @@
   @include respond(tab-port) { margin-bottom: 5rem !important; }
 }
 
+.u-margin-top-medium {
+  margin-top: 4rem !important;
+}
+
 .u-margin-top-big {
   margin-top: 8rem !important;
 }
