--- a/client/scss/components/_form.scss
+++ b/client/scss/components/_form.scss
@@ -4,21 +4,21 @@
   }
 
   &__input {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family: inherit;
     color: inherit;
     padding: 1.5rem 2rem;
     border-radius: 2px;
-    background-color: rgba($color-white, 0.5);
+    background-color: rgba($color-white, 0.8);
     border: none;
     border-bottom: 3px solid transparent;
-    width: 90%;
+    width: 95%;
     display: block;
     transition: all 0.3s;
 
-    @include respond(tab-port) { 
+    @include respond(tab-port) {
       width: 100%;
-     }
+    }
 
     &:focus {
       outline: none;
@@ -35,7 +35,7 @@
   }
 
   &__label {
-    font-size: 1.2rem;
+    font-size: 2rem;
     font-weight: 700;
     margin-left: 2rem;
     margin-top: 0.7rem;
@@ -100,4 +100,48 @@
   &__radio-input:checked ~ &__radio-label &__radio-button::after {
     opacity: 1;
   }
+}
+
+.column-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+}
+
+.form-column {
+  flex: 50%;
+  padding: 2rem;
+  align-self: center;
+}
+
+#message {
+  width: 100%;
+  height: 29rem;
+  font-size: 2rem;
+  font-family: inherit;
+  color: inherit;
+  // color: black;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba($color-white, 0.8);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 100%;
+  display: block;
+  transition: all 0.3s;
+  // margin-left: 6rem;
+
+  // &:focus {
+  //   outline: none;
+  //   box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+  //   border-bottom: 3px solid $color-primary;
+  // }
+  // &:focus:invalid {
+  //   border-bottom: 3px solid $color-secondary-dark;
+  // }
+
+  // &::-webkit-input-placeholder {
+  //   color: $color-grey-dark-2;
+  // }
 }
