--- a/client/scss/layout/_footer.scss
+++ b/client/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $color-grey-dark-3;
-  padding: 10rem 0;
+  padding: 4rem 0;
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
@@ -10,7 +10,7 @@
 
   &__logo-box {
     text-align: center;
-    margin-bottom: 8rem;
+    margin-bottom: 4rem;
 
     @include respond(tab-port) {
       margin-bottom: 5rem;
@@ -20,7 +20,6 @@
   &__logo {
     width: 15rem;
     height: auto;
-    
   }
 
   &__navigation {
@@ -67,7 +66,22 @@
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     width: 80%;
-    float: right;
+    // float: left;
+    text-align: center;
+    margin: auto;
+    // &:not(:last-child) {
+    //   margin-left: 0;
+    // }
+
+    & a {
+      color: white;
+      padding: 2rem;
+      // margin-left: 2rem;
+
+      & :last-child {
+        margin-left: 2rem;
+      }
+    }
 
     @include respond(tab-port) {
       width: 100%;
