--- a/client/scss/pages/_home.scss
+++ b/client/scss/pages/_home.scss
@@ -66,14 +66,14 @@
 }
 // note: solid color gradient
 .book {
-  background-image: linear-gradient(
-      105deg,
-      rgba($color-white, 0.9) 0%,
-      rgba($color-white, 0.9) 50%,
-      transparent 50%
-    ),
-    url(/img/nat-10.jpg);
+  width: 95%;
+  margin: auto;
+  background-image: linear-gradient(transparent 50%), url(/img/launch.jpg);
+  // background-size: contain;
+  background-repeat: no-repeat;
+  background-size: 95% 98%;
   background-size: cover;
+  background-position: center;
   border-radius: $border-radius;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
@@ -102,7 +102,7 @@
   }
 
   &__form {
-    width: 50%;
+    width: 95%;
     padding: 6rem;
 
     @include respond(tab-land) {
