--- a/css/main.css
+++ b/css/main.css
@@ -491,6 +491,10 @@ body {
           transform: translateY(0px);
 }
 
+.contact-submit {
+  text-align: center;
+}
+
 .composition {
   position: relative;
 }
@@ -1090,15 +1094,15 @@ body {
 }
 
 .form__input {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: inherit;
   color: inherit;
   padding: 1.5rem 2rem;
   border-radius: 2px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.8);
   border: none;
   border-bottom: 3px solid transparent;
-  width: 90%;
+  width: 95%;
   display: block;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -1127,7 +1131,7 @@ body {
 }
 
 .form__label {
-  font-size: 1.2rem;
+  font-size: 2rem;
   font-weight: 700;
   margin-left: 2rem;
   margin-top: 0.7rem;
@@ -1202,6 +1206,46 @@ body {
 
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
   opacity: 1;
+}
+
+.column-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+}
+
+.form-column {
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
+  padding: 2rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#message {
+  width: 100%;
+  height: 29rem;
+  font-size: 2rem;
+  font-family: inherit;
+  color: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 100%;
+  display: block;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .popup {
@@ -1760,7 +1804,7 @@ ul li:before {
 
 .footer {
   background-color: #333;
-  padding: 10rem 0;
+  padding: 4rem 0;
   font-size: 1.4rem;
   color: #f7f7f7;
 }
@@ -1773,7 +1817,7 @@ ul li:before {
 
 .footer__logo-box {
   text-align: center;
-  margin-bottom: 8rem;
+  margin-bottom: 4rem;
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -1836,7 +1880,17 @@ ul li:before {
   border-top: 1px solid #777;
   padding-top: 2rem;
   width: 80%;
-  float: right;
+  text-align: center;
+  margin: auto;
+}
+
+.footer__copyright a {
+  color: white;
+  padding: 2rem;
+}
+
+.footer__copyright a :last-child {
+  margin-left: 2rem;
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -2105,9 +2159,15 @@ ul li:before {
 }
 
 .book {
-  background-image: -o-linear-gradient(345deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(/img/nat-10.jpg);
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(/img/nat-10.jpg);
+  width: 95%;
+  margin: auto;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, transparent)), url(/img/launch.jpg);
+  background-image: -o-linear-gradient(transparent 50%), url(/img/launch.jpg);
+  background-image: linear-gradient(transparent 50%), url(/img/launch.jpg);
+  background-repeat: no-repeat;
+  background-size: 95% 98%;
   background-size: cover;
+  background-position: center;
   border-radius: 5px;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
@@ -2131,7 +2191,7 @@ ul li:before {
 }
 
 .book__form {
-  width: 50%;
+  width: 95%;
   padding: 6rem;
 }
 
