--- a/css/main.css
+++ b/css/main.css
@@ -1463,10 +1463,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 95%;
@@ -1477,9 +1473,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -1492,7 +1485,7 @@ body {
   margin-right: 4rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media only screen and (max-width: 75em) {
   .bio__container {
     margin-bottom: 1rem;
     -webkit-box-orient: vertical;
@@ -1503,9 +1496,9 @@ body {
 }
 
 .bio__container-pic {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   padding: 2rem;
 }
 
@@ -1550,13 +1543,17 @@ body {
 }
 
 #pic-1 {
-  height: 200px;
+  height: 350px;
   width: auto;
+  margin-left: 2rem;
+  width: 0;
 }
 
 @media only screen and (max-width: 56.25em) {
   #pic-1 {
-    display: none;
+    height: 250px;
+    width: auto;
+    margin-left: 2rem;
   }
 }
 
@@ -1568,13 +1565,14 @@ body {
 }
 
 #pic-2 {
-  height: 300px;
+  height: 350px;
   width: auto;
 }
 
 @media only screen and (max-width: 56.25em) {
   #pic-2 {
     height: 250px;
+    width: auto;
   }
 }
 
@@ -1640,7 +1638,7 @@ ul li:before {
 
 .count {
   position: absolute;
-  right: .1em;
+  right: 0;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
