--- a/css/main.css
+++ b/css/main.css
@@ -1591,19 +1591,6 @@ body {
   margin: 0 auto;
 }
 
-ul li {
-  line-height: 2;
-  font-weight: bold;
-  font-size: 1.6rem;
-  text-transform: uppercase;
-  clear: both;
-}
-
-ul li:before {
-  content: '\2023';
-  padding: 0 1em 0 0;
-}
-
 .bar {
   background: #1c302e;
   width: 0;
@@ -2095,16 +2082,13 @@ ul li:before {
 
 .section-skills {
   padding: 10rem 0;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(129, 186, 180, 0.8)), to(rgba(78, 125, 120, 0.8))), url(/img/flyingbikeright.jpg);
-  background-image: -o-linear-gradient(left top, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8)), url(/img/flyingbikeright.jpg);
-  background-image: linear-gradient(to right bottom, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8)), url(/img/flyingbikeright.jpg);
-  background-size: 50% 50%;
-  background-size: cover;
+  background: url(/img/skillsbac.png) no-repeat center fixed, -webkit-gradient(linear, left top, right bottom, from(rgba(129, 186, 180, 0.8)), to(rgba(78, 125, 120, 0.8)));
+  background: url(/img/skillsbac.png) no-repeat center fixed, -o-linear-gradient(left top, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
+  background: url(/img/skillsbac.png) no-repeat center fixed, linear-gradient(to right bottom, rgba(129, 186, 180, 0.8), rgba(78, 125, 120, 0.8));
+  background-size: 95vw auto;
   -webkit-transform: skewY(-7deg);
       -ms-transform: skewY(-7deg);
           transform: skewY(-7deg);
-  margin-top: 2rem;
-  margin-bottom: 10rem;
 }
 
 .section-skills > * {
